Fix CSS issues on smaller screens #2

--- a/src/pages/components/countriest-list/components/country-details-dialog/CountryDetailsBorders.module.scss
+++ b/src/pages/components/countriest-list/components/country-details-dialog/CountryDetailsBorders.module.scss
@@ -9,4 +9,5 @@
   align-items: center;
   gap: 0.5rem;
   margin-top: 3rem;
+  flex-wrap: wrap;
 }
